Implement time retrieval points for data analysis

--- a/Code/src/web/views/bolo-create-auto-form.jade
+++ b/Code/src/web/views/bolo-create-auto-form.jade
@@ -15,6 +15,12 @@ block content
     form#create-bolo-form(action= "/bolo/create" enctype="multipart/form-data" method="post")
         input( type = "hidden" name="status" value="new")
 
+        .row
+            .col-md-6
+                +input_text( "dateReported", "Date Reported (DD/MM/YYYY)", "", false, "" )
+            .col-md-6
+                +input_text( "timeReported", "Time Reported (HH:MM)", "", false, "" )
+
         +input_text_static( "category", "Category", "", false, "THEFT - AUTO")
 
         +input_text( "vehicleYear", "Year", "", false,  "" )
@@ -43,5 +49,5 @@ block content
         +input_textarea( "summary", "Summary", "", false, "" )
 
         .form-group
-            button.btn.btn-default( name = "option" type = "submit" value = "submit") SUBMIT
+            button.btn.btn-default( name = "option" type = "submit" value = "submit" id= "buttonClickCreate" disabled = false) SUBMIT
             button.btn.btn-default( name = "option" type = "submit" value = "preview" ) PREVIEW
