--- a/Code/src/web/views/bolo-create-generalbolo-form.jade
+++ b/Code/src/web/views/bolo-create-generalbolo-form.jade
@@ -11,8 +11,16 @@ block content
     include ./partials/global-alerts.jade
     include ./partials/bolo-options.jade
 
+
     form#create-bolo-form(action= "/bolo/create" enctype="multipart/form-data" method="post")
         input( type = "hidden" name="status" value="new")
+
+        .row
+            .col-md-6
+                +input_text( "dateReported", "Date Reported (DD/MM/YYYY)", "", false, "" )
+            .col-md-6
+                +input_text( "timeReported", "Time Reported (HH:MM)", "", false, "" )
+
         +select_options( "category", "Category", categories, true, "" )
 
         +input_text( "firstName", "First Name", "", false, "" )
@@ -46,5 +54,5 @@ block content
         +input_textarea( "summary", "Summary", "", false, "" )
 
         .form-group
-            button.btn.btn-default( name = "option" type = "submit" value = "submit") SUBMIT
+            button.btn.btn-default( name = "option" type = "submit" value = "submit" id= "buttonClickCreate" disabled = false) SUBMIT
             button.btn.btn-default( name = "option" type = "submit" value = "preview" ) PREVIEW
