--- a/Code/src/web/views/bolo-search-boat-form.jade
+++ b/Code/src/web/views/bolo-search-boat-form.jade
@@ -19,7 +19,6 @@ block content
         div.text-danger.strong.h4 Search Theft - Boat
 
         +select_options( "agencyName", "Agency", agencies, true, "" )
-        +select_options( "category", "Category", categoriesBoat, true, "" )
 
         div.text-danger.strong.h4 Vessel
 
@@ -39,7 +38,7 @@ block content
         div.text-danger.strong.h4 Propulsion
 
         +select_options( "propulsion", "Propulsion", v_propulsion, false, "" )
-        +select_options( "propulsionType", "Motor Type", v_propulsion_type, false, "" )
+        +select_options( "propulsionType", "Type", v_propulsion_type, false, "" )
         +select_options( "propulsionMake", "Make", v_propulsion_make, false, "" )
 
         div.text-danger.strong.h4 Trailer
