--- a/Code/src/web/views/partials/bolo-options.jade
+++ b/Code/src/web/views/partials/bolo-options.jade
@@ -39,6 +39,10 @@
         '','Canceled', 'In Custody', 'Located', 'Recovered'
     ]
 
+    var bolo_status_theft = [
+        '','Canceled', 'Recovered'
+    ]
+
     var vehicles_makes = [
         '', 'Acura', 'Alfa Romeo', 'Aston Martin', 'Audi', 'Bentley', 'BMW', 'Buick', 'Cadillac', 'Chevrolet',
         'Chrysler', 'Dodge', 'Ferrari', 'Fiat', 'Ford', 'Genesis', 'GMC', 'Honda', 'Hyundai', 'Infinity',
