--- a/Code/src/web/views/bolo-edit-boat-form.jade
+++ b/Code/src/web/views/bolo-edit-boat-form.jade
@@ -28,8 +28,25 @@ block content
         input( type="hidden" name="id" value=bolo.id )
         input( type="hidden" name="record" value=bolo.record)
         input( type="hidden" name="agencyName" value=bolo.agencyName)
+        input( type="hidden" name="dateReported" value=bolo.data.dateReported )
+        input( type="hidden" name="timeReported" value=bolo.data.timeReported )
 
-        +select_options( "status", "Status", bolo_status, false, bolo.status )
+        +select_options( "status", "Status", bolo_status_theft, false, bolo.status )
+
+        .row
+            .col-md-6
+                +input_text( "dateRecovered", "Date Recovered (DD/MM/YYYY)", "", false, "" )
+            .col-md-6
+                +input_text( "timeRecovered", "Time Recovered (HH:MM)", "", false, "" )
+
+
+        +input_text( "addressRecovered", "Address Recovered", "", false, "" )
+
+        .row
+            .col-md-6
+                +input_text( "zipCodeRecovered", "Zip Code", "", false, "" )
+            .col-md-6
+                +input_text( "agencyRecovered", "Agency", "", false, "" )
 
         +input_text_static( "category", "Category", "", false, "THEFT - BOAT")
 
@@ -51,7 +68,7 @@ block content
         div.text-danger.strong.h4 Propulsion
 
         +select_options( "propulsion", "Propulsion", v_propulsion, false, bolo.propulsion )
-        +select_options( "propulsionType", "Motor Type", v_propulsion_type, false, bolo.propulsionType )
+        +select_options( "propulsionType", "Type", v_propulsion_type, false, bolo.propulsionType )
         +select_options( "propulsionMake", "Make", v_propulsion_make, false, bolo.propulsionMake )
 
         div.text-danger.strong.h4 Trailer
@@ -95,6 +112,6 @@ block content
         +input_textarea( "summary", "Summary", "", false, bolo.summary )
 
         .form-group
-            button.btn.btn-primary( type="submit" value="save" ) Publish
+            button.btn.btn-primary( type="submit" value="save" id= "buttonClickEdit" disabled = false ) Publish
             button.btn.btn-default( type="submit" disabled=true value="preview" ) Preview
             button.btn.btn-default( type="submit" disabled=true value="pdf" ) PDF
