--- a/Code/src/web/views/bolo-edit-form.jade
+++ b/Code/src/web/views/bolo-edit-form.jade
@@ -28,10 +28,27 @@ block content
         input( type="hidden" name="id" value=bolo.id )
         input( type="hidden" name="record" value=bolo.record)
         input( type="hidden" name="agencyName" value=bolo.agencyName)
+        input( type="hidden" name="dateReported" value=bolo.data.dateReported )
+        input( type="hidden" name="timeReported" value=bolo.data.timeReported )
 
         +select_options( "status", "Status", bolo_status, false, bolo.status )
-        +select_options( "category", "Category", categories, true, bolo.category )
 
+        .row
+            .col-md-6
+                +input_text( "dateRecovered", "Date Recovered (DD/MM/YYYY)", "", false, "" )
+            .col-md-6
+                +input_text( "timeRecovered", "Time Recovered (HH:MM)", "", false, "" )
+
+
+        +input_text( "addressRecovered", "Address Recovered", "", false, "" )
+
+        .row
+            .col-md-6
+                +input_text( "zipCodeRecovered", "Zip Code", "", false, "" )
+            .col-md-6
+                +input_text( "agencyRecovered", "Agency", "", false, "" )
+
+        +select_options( "category", "Category", categories, true, bolo.category )
         +input_text( "firstName", "First Name", "", false, bolo.firstName )
         +input_text( "lastName", "Last Name", "", false,  bolo.lastName )
         +input_text( "dob", "Date of Birth (MM/DD/YYYY )", "", false, bolo.dob )
@@ -75,6 +92,6 @@ block content
         +input_textarea( "summary", "Summary", "", false, bolo.summary )
 
         .form-group
-            button.btn.btn-primary( type="submit" value="save" ) Publish
+            button.btn.btn-primary( type="submit" value="save" id= "buttonClickEdit" disabled = false) Publish
             button.btn.btn-default( type="submit" disabled=true value="preview" ) Preview
             button.btn.btn-default( type="submit" disabled=true value="pdf" ) PDF
