--- a/Code/src/web/views/bolo-preview-boat-details.jade
+++ b/Code/src/web/views/bolo-preview-boat-details.jade
@@ -45,11 +45,20 @@ block content
             div.col-xs-8#boloDetails
                 form.form-horizontal
                 +form_labels_row("Bolo ID", "XYZ000" )
+
+                if bolo.data.dateReported.length
+                  +form_labels_row("Date Reported", bolo.data.dateReported, bolo.data.dateReported?"":"hidden")
+                else
+                  +form_labels_row("Date Reported", "N/A" )
+                if bolo.data.timeReported.length
+                  +form_labels_row("Time Reported", bolo.data.timeReported, bolo.data.timeReported?"":"hidden")
+                else
+                  +form_labels_row("Time Reported", "N/A" )
+
                 if bolo.data.authorFName != null || bolo.data.authorLName != null
                   +form_labels_row("Author", bolo.data.authorFName + " " +  bolo.data.authorLName )
                 else
                   +form_labels_row("Author", "N/A")
-
 
                 div.col-xs-12.h5.text-danger.strong VESSEL
 
@@ -96,7 +105,7 @@ block content
                 else
                    +form_labels_row("Propulsion", "N/A" )
                 if bolo.data.propulsionType != "Select an option..."
-                   +form_labels_row("Motor Type", bolo.data.propulsionType, bolo.data.propulsionType?"":"hidden")
+                   +form_labels_row("Type", bolo.data.propulsionType, bolo.data.propulsionType?"":"hidden")
                 else
                    +form_labels_row("Type", "N/A" )
                 if bolo.data.propulsionMake != "Select an option..."
