--- a/Code/src/web/views/bolo-preview-details.jade
+++ b/Code/src/web/views/bolo-preview-details.jade
@@ -44,7 +44,18 @@ block content
 
             div.col-xs-8#boloDetails
                 form.form-horizontal
+
                 +form_labels_row("Bolo ID", "XYZ000" )
+
+                if bolo.data.dateReported.length
+                  +form_labels_row("Date Reported", bolo.data.dateReported, bolo.data.dateReported?"":"hidden")
+                else
+                  +form_labels_row("Date Reported", "N/A" )
+                if bolo.data.timeReported.length
+                  +form_labels_row("Time Reported", bolo.data.timeReported, bolo.data.timeReported?"":"hidden")
+                else
+                  +form_labels_row("Time Reported", "N/A" )
+
                 if bolo.data.authorFName != null || bolo.data.authorLName != null
                   +form_labels_row("Author", bolo.data.authorFName + " " +  bolo.data.authorLName )
                 else
