--- a/Code/src/web/views/bolo-search-auto-form.jade
+++ b/Code/src/web/views/bolo-search-auto-form.jade
@@ -26,7 +26,11 @@ block content
         +select_options( "vehicleStyle", "Style", v_style, false, "" )
         +input_text( "vehicleColor", "Color", "", false, "" )
         +input_text( "vehicleIdNumber", "Vehicle Identification Number", "", false,  "" )
-        +input_text( "vehicleLicensePlate", "License Plate", "", false, "" )
+        .row
+            .col-md-4
+                +select_options( "vehicleLicenseState", "Tag License Plate", states, false, "" )
+            .col-md-8
+                +input_text( "vehicleLicensePlate", "", "", false, "" )
 
         +input_text( "wildcard", "Wildcard Search", "", false, "" )
         +check_box("matchFields","Match Fields",true)
