--- a/Code/src/web/views/about-fiu.jade
+++ b/Code/src/web/views/about-fiu.jade
@@ -9,16 +9,388 @@ block jumbo
 block content
     table
         tr
-            h1 This page is under construction
-        tr
-            p &nbsp;&nbsp;&nbsp;&nbsp; FIU made major contributions by
-
-        tr
-            td.col-md-4
-                img#featured.img-fluid( src="/img/UGpic.jpg" alt="", width=400 )
-                h3 Project Mentor: Juan Caraballo
-                P
             td
-                img#featured.img-fluid( src="/img/UGpic.jpg" alt="", width=400 )
-                h3 Project Mentor: Robert Loredo
+                // a(href='http://www.cis.fiu.edu/seniorproject/' target='_blank')
+                a(href='https://cec.fiu.edu/' target='_blank')
+                    #[img#featured.img.center-block( src="/img/fiu-cec.png" alt="" )]
                 p
+                    <br><br>
+                p For the seniors in FIU’s Department of Electrical and Computer
+                    | Engineering, everything they’ve learned in four years
+                    | culminates with a single project. Working together in teams,
+                    | they take on projects that test their knowledge, ingenuity,
+                    | patience and imagination. Finally, on Senior Design Day,
+                    | the students put on their best suits and showcase their
+                    | projects to a host of industry advisers who pick their brains
+                    | and give them feedback on their work. The Senior Project
+                    | course was created to test a potential graduates ability to
+                    | work in a real software development environment. Potential
+                    | graduates' success in this course will enable them to provide
+                    | a significant software project that may help them land a job
+                    | in the real-world.
+                    <br><br><br><br>
+        tr
+            td
+                a(href='http://users.cis.fiu.edu/~sadjadi/' target='_blank')
+                    #[img#featured.img.left-block( src="/img/sadjadi.jpg" alt="", width=300)]
+                    <br>
+                h4.strong Masoud Sadjadi, PhD
+                p Dr. Sadjadi holds a B.S. degree in Hardware Engineering, an M.S.
+                    | degree in Software Engineering, and a Ph.D. degree in Computer
+                    | Science. He is currently an Associate Professor in the School
+                    | of Computing and Information Sciences at Florida International
+                    | University, where he has been on the faculty since 2004. He
+                    | serves as the Director of the VIP project at FIU, the Director
+                    | of the Professional Master in Science for Information Technology
+                    | at FIU, and is in charge of Computer Science Senior Projects.
+                    | He has extensive experience in software development and leading
+                    | large-scale software engineering projects both in industry
+                    | and in academia. During the past three years, Dr. Sadjadi
+                    | has successfully transformed senior projects at FIU from a
+                    | traditional waterfall approach to an agile/scrum approach.
+                    | Dr. Sadjadis research is focused on Agile Software Development
+                    | in Distributed Systems, Autonomic Computing, High-Performance
+                    | Computing, Grid Computing, Cloud Computing, Pervasive Systems,
+                    | and Mobile Computing. He is the Director of the Autonomic
+                    | Cloud Research Laboratory (ACRL) at FIU and leads several
+                    | projects under the Latin American Grid initiative. Currently,
+                    | he is collaborating with top researchers in 8 countries and
+                    | is leading several international collaborative research projects.
+                    | He has served as the General Chair of, Program Chair, Co-Chair,
+                    | and Committee Member of several top-tier international conferences
+                    | and workshops of his field. He has served as a referee for
+                    | several IEEE and SP&E journals and as a referee and panelist
+                    | for several funding agencies including National Science Foundation
+                    | (NSF), Luxembourg National Research Fund (FNR), and Florida Sea Grant.
+                    | He has more than 80-refereed publications and is PI or Co-PI
+                    | of 17 grants from NSF, IBM, Kaseya, TeraGrid, and FIU for a
+                    | total of about $6 million. Dr. Sadjadi was previously the
+                    | Director of the Center of Partnership for International
+                    | Research & Education (PIRE) funded by the National Science
+                    | Foundation for $2.3 million. He is a member of the IEEE and
+                    | can be reached at sadjadi@cs.fiu.edu
+                    <br><br>
+        tr
+            td
+                a(href='http://vip.fiu.edu/#/contact' target='_blank')
+                    img#featured.img.left-block( src="/img/mohsen.jpg" alt="", width=300)
+                h4.strong Mohsen Taheri
+                p Mohsen Taheri has been a PhD student of Computer Science at
+                    | Florida International University (FIU) since Fall 2014. He
+                    | received the B.S. degree in computer engineering/software
+                    | engineering in 2010, the M.S. degree in computer
+                    | engineering/software engineering in 2014. Currently, he is
+                    | working under the supervision of Prof. Masoud Sadjadi. The
+                    | main focus of his research is on Software Engineering and
+                    | Agile Software Development.
+                    <br>
+        tr
+            td.container-fluid
+                h1 The developers
+        tr
+            td.container-fluid
+                h2.strong Spring 2015
+        tr.hidden-sm.hidden-xs
+            td.container-fluid
+                img.img.left-block( src="/img/fiu.jpg" alt="", width=300)
+                h4.strong Perez, Danae I.
+                p dpere241@fiu.edu
+                p Graduation May 2015
+                <br><br>
+            td.container-fluid
+                img.img.right-block( src="/img/fiu.jpg" alt="", width=300)
+                h4.strong Vidal, Icxe
+                p ivida002@fiu.edu
+                p Graduation May 2015
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-xs
+            td.container-fluid
+                img.img.left-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Perez, Danae I.
+                p dpere241@fiu.edu
+                p Graduation May 2015
+                <br><br>
+            td.container-fluid
+                img.img.right-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Vidal, Icxe
+                p ivida002@fiu.edu
+                p Graduation May 2015
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-sm
+            td.container-fluid
+                img.img.center-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Perez, Danae I.
+                p dpere241@fiu.edu
+                p Graduation May 2015
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-sm
+            td.container-fluid
+                img.img.center-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Vidal, Icxe
+                p ivida002@fiu.edu
+                p Graduation May 2015
+                <br><br>
+        tr
+            td.container-fluid
+                h2.strong Summer 2015
+        tr.hidden-sm.hidden-xs
+            td.container-fluid
+                img#featured.img.left-block( src="/img/fiu.jpg" alt="", width=300)
+                h4.strong Fleitas, Yamila
+                p yflei001@fiu.edu
+                p Graduation Aug 2015
+                <br><br>
+            td.container-fluid
+                img#featured.img.right-block( src="/img/fiu.jpg" alt="", width=300)
+                h4.strong Vizcaino, David
+                p dvizc002@fiu.edu
+                p Graduation Aug 2015
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-xs
+            td.container-fluid
+                img#featured.img.left-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Fleitas, Yamila
+                p yflei001@fiu.edu
+                p Graduation Aug 2015
+                <br><br>
+            td.container-fluid
+                img#featured.img.right-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Vizcaino, David
+                p dvizc002@fiu.edu
+                p Graduation Aug 2015
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-sm
+            td.container-fluid
+                img#featured.img.center-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Fleitas, Yamila
+                p yflei001@fiu.edu
+                p Graduation Aug 2015
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-sm
+            td.container-fluid
+                img#featured.img.center-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Vizcaino, David
+                p dvizc002@fiu.edu
+                p Graduation Aug 2015
+                <br><br>
+        tr
+            td.container-fluid
+                h2.strong Fall 2015
+        tr.hidden-sm.hidden-xs
+            td.container-fluid
+                img#featured.img.left-block( src="/img/fiu.jpg" alt="", width=300)
+                h4.strong Rodney, Sanchez
+                p rsantamarina@outlook.com
+                p Graduation Dec 2015
+                <br><br>
+            td.container-fluid
+                img#featured.img.right-block( src="/img/fiu.jpg" alt="", width=300)
+                h4.strong del Rosario, Ryan
+                p delrosario.ryan@gmail.com
+                p Graduation Dec 2015
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-xs
+            td.container-fluid
+                img#featured.img.left-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Rodney, Sanchez
+                p rsantamarina@outlook.com
+                p Graduation Dec 2015
+                <br><br>
+            td.container-fluid
+                img#featured.img.right-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong del Rosario, Ryan
+                p delrosario.ryan@gmail.com
+                p Graduation Dec 2015
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-sm
+            td.container-fluid
+                img#featured.img.center-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Rodney, Sanchez
+                p rsantamarina@outlook.com
+                p Graduation Dec 2015
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-sm
+            td.container-fluid
+                img#featured.img.center-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong del Rosario, Ryan
+                p delrosario.ryan@gmail.com
+                p Graduation Dec 2015
+                <br><br>
+        tr
+            td.container-fluid
+                h2.strong Spring 2016
+        tr.hidden-sm.hidden-xs
+            td.container-fluid
+                img#featured.img.left-block( src="/img/fiu.jpg" alt="", width=300)
+                h4.strong Alvarez, Edwin
+                p ealva153@fiu.edu
+                p Graduation May 2015
+                <br><br>
+            td.container-fluid
+                img#featured.img.right-block( src="/img/fiu.jpg" alt="", width=300)
+                h4.strong Henao, Alejandro
+                p ahena001@fiu.edu
+                p Graduation May 2015
+                <br><br>
+        tr.hidden-sm.hidden-xs
+            td.container-fluid
+                img#featured.img.left-block( src="/img/fiu.jpg" alt="", width=300)
+                h4.strong Martin, Leonardo
+                p lmart296@fiu.edu
+                p Graduation May 2015
+                <br><br>
+            td.container-fluid
+                img#featured.img.right-block( src="/img/fiu.jpg" alt="", width=300)
+                h4.strong Messarina, Piero
+                p piero.messarina@gmail.com
+                p Graduation May 2015
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-xs
+            td.container-fluid
+                img#featured.img.left-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Alvarez, Edwin
+                p ealva153@fiu.edu
+                p Graduation May 2015
+                <br><br>
+            td.container-fluid
+                img#featured.img.right-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Henao, Alejandro
+                p ahena001@fiu.edu
+                p Graduation May 2015
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-xs
+            td.container-fluid
+                img#featured.img.left-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Martin, Leonardo
+                p lmart296@fiu.edu
+                p Graduation May 2015
+                <br><br>
+            td.container-fluid
+                img#featured.img.right-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Messarina, Piero
+                p piero.messarina@gmail.com
+                p Graduation May 2015
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-sm
+            td.container-fluid
+                img#featured.img.center-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Alvarez, Edwin
+                p ealva153@fiu.edu
+                p Graduation May 2015
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-sm
+            td.container-fluid
+                img#featured.img.center-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Henao, Alejandro
+                p ahena001@fiu.edu
+                p Graduation May 2015
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-sm
+            td.container-fluid
+                img#featured.img.center-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Martin, Leonardo
+                p lmart296@fiu.edu
+                p Graduation May 2015
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-sm
+            td.container-fluid
+                img#featured.img.center-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Messarina, Piero
+                p piero.messarina@gmail.com
+                p Graduation May 2015
+                <br><br>
+        tr
+            td.container-fluid
+                h2.strong Summer 2016
+        tr.hidden-sm.hidden-xs
+            td.container-fluid
+                img#featured.img.left-block( src="/img/burke.jpg" alt="", width=300)
+                h4.strong Burke, John
+                p jburk045@fiu.edu
+                p Front end
+                p Graduation 5 Aug. 2016
+                <br><br>
+            td.container-fluid
+                img#featured.img.right-block( src="/img/fiu.jpg" alt="", width=300)
+                h4.strong Gonzalez, Emmanuel
+                p egonz077@fiu.edu
+                p Back end
+                p Graduation 5 Aug. 2016
+                <br><br>
+        tr.hidden-sm.hidden-xs
+            td.container-fluid
+                img#featured.img.left-block( src="/img/medina_j.png" alt="", width=300)
+                h4.strong Medina, Jorge
+                p jmedi116@fiu.edu
+                p Back end
+                p Graduation 5 Aug. 2016
+                <br><br>
+            td.container-fluid
+                img#featured.img.right-block( src="/img/nilton.jpg" alt="", width=300)
+                h4.strong Munoz, Nilton
+                p nmuno013@fiu.edu
+                p Bolo Templates
+                p Graduation 5 Aug. 2016
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-xs
+            td.container-fluid
+                img#featured.img.left-block( src="/img/burke.jpg" alt="", width=200)
+                h4.strong Burke, John
+                p jburk045@fiu.edu
+                p Front end
+                p Graduation 5 Aug. 2016
+                <br><br>
+            td.container-fluid
+                img#featured.img.right-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Gonzalez, Emmanuel
+                p egonz077@fiu.edu
+                p Back end
+                p Graduation 5 Aug. 2016
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-xs
+            td.container-fluid
+                img#featured.img.left-block( src="/img/medina_j.png" alt="", width=200)
+                h4.strong Medina, Jorge
+                p jmedi116@fiu.edu
+                p Back end
+                p Graduation 5 Aug. 2016
+                <br><br>
+            td.container-fluid
+                img#featured.img.right-block( src="/img/nilton.jpg" alt="", width=200)
+                h4.strong Munoz, Nilton
+                p nmuno013@fiu.edu
+                p Bolo Templates
+                p Graduation 5 Aug. 2016
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-sm
+            td.container-fluid
+                img#featured.img.center-block( src="/img/burke.jpg" alt="", width=200)
+                h4.strong Burke, John
+                p jburk045@fiu.edu
+                p Front end
+                p Graduation 5 Aug. 2016
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-sm
+            td.container-fluid
+                img#featured.img.center-block( src="/img/fiu.jpg" alt="", width=200)
+                h4.strong Gonzalez, Emmanuel
+                p egonz077@fiu.edu
+                p Back end
+                p Graduation 5 Aug. 2016
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-sm
+            td.container-fluid
+                img#featured.img.center-block( src="/img/medina_j.png" alt="", width=200)
+                h4.strong Medina, Jorge
+                p jmedi116@fiu.edu
+                p Back end
+                p Graduation 5 Aug. 2016
+                <br><br>
+        tr.hidden-lg.hidden-md.hidden-sm
+            td.container-fluid
+                img#featured.img.center-block( src="/img/nilton.jpg" alt="", width=200)
+                h4.strong Munoz, Nilton
+                p nmuno013@fiu.edu
+                p Bolo Templates
+                p Graduation 5 Aug. 2016
+                <br><br>
