--- a/Code/src/web/views/admin-layout.jade
+++ b/Code/src/web/views/admin-layout.jade
@@ -21,7 +21,10 @@ block jumbo
                     a(href="/admin/dataSubscriber") Data Subscribers
                 li(class=( admin_nav === 'admin-systemSetting' ? 'active' : '' ))
                   if(tier === 'ROOT')
-                    a(href="#") System Setting
+                    a(href="/admin/systemSetting") System Setting
+                li(class=( admin_nav === 'admin-dataAnalysis' ? 'active' : '' ))
+                  if(tier === 'ROOT')
+                    a(href="/admin/dataAnalysis") Data Analysis
         .col-sm-9
             include ./partials/global-alerts.jade
             block admin-content
