--- a/Code/src/web/views/includes/_nav.jade
+++ b/Code/src/web/views/includes/_nav.jade
@@ -8,7 +8,8 @@ mixin nav(name, id)
                 span.icon-bar
                 span.icon-bar
                 span.icon-bar
-            a.navbar-brand(href="/")= name
+            if userLoggedIn
+                a.navbar-brand(href="/")= name
 
         .collapse.navbar-collapse( id=id )
             block
