renamed route names and classes, change logo color and deleted unsed images

--- a/Code/src/web/views/index.jade
+++ b/Code/src/web/views/index.jade
@@ -4,7 +4,7 @@ include ./includes/mixins.jade
 block jumbo
     .jumbotron
         .container
-            p BOLO Version 4.0
+            p BOLO
 
 block content
     div
