--- a/Code/src/web/views/system-setting.jade
+++ b/Code/src/web/views/system-setting.jade
@@ -14,19 +14,19 @@ block content
         <br> <br> <br>
         div.container
             div.row
-                div.col-md-4
+                div.col-lg-4.col-md-6.col-sm-6.col-xs-12
                     label Brute Force Login (3 - 10) Attempts&nbsp;&nbsp;
                     input(type='number', name='brute', min='3', max='10')
                     <br>
                     <br>
             div.row
-                div.col-md-4
+                div.col-lg-4.col-md-6.col-sm-6.col-xs-12
                     label System Timeout (10 - 240) Minutes&nbsp;&nbsp;
                     input(type='number', name='minutes', min='10', max='240')
                     <br>
                     <br>
             div.row
-                div.col-md-4
+                div.col-lg-4.col-md-6.col-sm-6.col-xs-12
                     input(type='submit', data-inline='true', value='Submit')
 
     else
