--- a/Code/src/web/views/data-analysis.jade
+++ b/Code/src/web/views/data-analysis.jade
@@ -25,18 +25,19 @@ block content
         });
     if (tier === 'ROOT')
         div.container
-            div.col-md-3
-                h3 Analysis Parameters:
-                    .form-group
-                    select#anim
-                        option(value='') Agency
-                        option(value='#') Auto Theft
-                        option(value='#') Boat Theft
-                        option(value='#') All
-                        <br>
+            div.row
+                div.col-lg-3.col-md-4.col-sm-6.hidden-xs
+                    h3 Analysis Parameters:
+                        .form-group
+                        select#anim
+                            option(value='') Agency
+                            option(value='#') Auto Theft
+                            option(value='#') Boat Theft
+                            option(value='#') All
+                            <br>
         div.container
             div.row
-                div.col-md-4.col-sm-6
+                div.col-lg-3.col-md-4.col-sm-6.hidden-xs
                     h3 From Date:
                     form
                         .form-group
@@ -44,7 +45,7 @@ block content
 
         div.container
             div.row
-                div.col-md-4.col-sm-6
+                div.col-lg-3.col-md-4.col-sm-6.hidden-xs
                     h3 To Date:
                     form
                         .form-group
@@ -52,8 +53,12 @@ block content
         <br>
         <br>
         div
-            .col-med-6
+            div.col-lg-3.col-md-4.col-sm-6.hidden-xs
                 .form-group
                     button.btn.btn-default( name = "option" type = "submit" value = "submit") SUBMIT
+        div.hidden-lg.hidden-md.hidden-sm
+            br
+            p I apologize for the inconvenience, you have been temporary restricted
+                | from this action because you may not have enough memory from your device
     else
         h1 Well this is embarrassing! Who are you?
