--- a/Code/src/web/views/partials/main-nav.jade
+++ b/Code/src/web/views/partials/main-nav.jade
@@ -23,7 +23,7 @@ include ../includes/mixins.jade
     else
         ul.nav.navbar-nav.navbar-right
             +dropdown_menu( 'About Us')
-                li: a( href="/aboutUs/BOLO" ) M.D.C.A.C.P.
+                li: a( href="/aboutUs/MDCACP" ) M.D.C.A.C.P.
                 li: a( href="/aboutUs/FIU" ) FIU's Contribution
                 li: a( href="/aboutUs/IBM" ) IBM's Contribution
                 li: a( href="/login" ) Login
