added students to about FIU's contribution and restricted sm screen from data retrieval

--- a/Code/src/web/views/about-ibm.jade
+++ b/Code/src/web/views/about-ibm.jade
@@ -29,7 +29,26 @@ block content
                 br
 
         div.row
-            div.col-xl-3.col-lg-3.col-md-4.col-sm-6.col-xs-12
+            div.col-xl-offset-2.col-xl-3.col-lg-offset-2.col-lg-3.hidden-md.hidden-sm.hidden-xs
+                img#featured.img-fluid( src="/img/caraballo.jpg" alt="", width=300 )
+                h3.strong Juan Caraballo
+                p IBM Software Engineer
+                p Student mentor
+                br
+                br
+                br
+                br
+            div.col-xl-offset-2.col-xl-3.col-lg-offset-2.col-lg-3.hidden-md.hidden-sm.hidden-xs
+                img#featured.img-fluid( src="/img/robert_loredo.png" alt="", width=300 )
+                h3.strong Robert Loredo
+                p IBM Software Engineer
+                p Student mentor
+                br
+                br
+                br
+                br
+        div.row
+            div.hidden-xl.hidden-lg.col-md-offset-1.col-md-4.col-sm-offset-1.col-sm-4.col-xs-12
                 img#featured.img-fluid( src="/img/caraballo.jpg" alt="", width=200 )
                 h3.strong Juan Caraballo
                 p IBM Software Engineer
@@ -38,7 +57,7 @@ block content
                 br
                 br
                 br
-            div.col-xl-offset-3.col-xl-3.col-lg-offset-3.col-lg-3.col-md-4.col-sm-6.col-xs-12
+            div.hidden-xl.hidden-lg.col-md-offset-2.col-md-4.col-sm-offset-2.col-sm-4.col-xs-12
                 img#featured.img-fluid( src="/img/robert_loredo.png" alt="", width=200 )
                 h3.strong Robert Loredo
                 p IBM Software Engineer
