--- a/Code/src/web/views/data-analysis.jade
+++ b/Code/src/web/views/data-analysis.jade
@@ -26,7 +26,7 @@ block content
     if (tier === 'ROOT')
         div.container
             div.row
-                div.col-lg-3.col-md-4.col-sm-6.hidden-xs
+                div.col-lg-3.col-md-4.hidden-sm.hidden-xs
                     h3 Analysis Parameters:
                         .form-group
                         select#anim
@@ -37,7 +37,7 @@ block content
                             <br>
         div.container
             div.row
-                div.col-lg-3.col-md-4.col-sm-6.hidden-xs
+                div.col-lg-3.col-md-4.hidden-sm.hidden-xs
                     h3 From Date:
                     form
                         .form-group
@@ -45,7 +45,7 @@ block content
 
         div.container
             div.row
-                div.col-lg-3.col-md-4.col-sm-6.hidden-xs
+                div.col-lg-3.col-md-4.hidden-sm.hidden-xs
                     h3 To Date:
                     form
                         .form-group
@@ -53,10 +53,10 @@ block content
         <br>
         <br>
         div
-            div.col-lg-3.col-md-4.col-sm-6.hidden-xs
+            div.col-lg-3.col-md-4.hidden-sm.hidden-xs
                 .form-group
                     button.btn.btn-default( name = "option" type = "submit" value = "submit") SUBMIT
-        div.hidden-lg.hidden-md.hidden-sm
+        div.hidden-lg.hidden-md
             br
             p I apologize for the inconvenience, you have been temporary restricted
                 | from this action because you may not have enough memory from your device
